// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputAdornment /> should have the root and end class when position is end 1`] = `
.c1 {
  margin: 0;
  text-align: inherit;
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
  line-height: 1.5;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  margin-right: 0;
  margin-left: 8px;
  pointer-events: auto;
}

<div
  class="c0"
  data-testid="adornment"
>
  <p
    class="c1"
    color="textSecondary"
    display="initial"
  >
    foo
  </p>
</div>
`;

exports[`<InputAdornment /> should have the root and start class when position is start 1`] = `
.c1 {
  margin: 0;
  text-align: inherit;
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
  line-height: 1.5;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  margin-right: 8px;
  margin-left: 0;
  pointer-events: auto;
}

<div
  class="c0"
  data-testid="adornment"
>
  <p
    class="c1"
    color="textSecondary"
    display="initial"
  >
    foo
  </p>
</div>
`;
